tests/fixtures/invalid/divmod_bytes_none.py
# Cannot call divmod() with Bytes, None
x = divmod(b"hello", None)
